Fixed issue where there was horizontal overflow on mobile

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 /* Hide Scrollbar */
@@ -32,7 +33,6 @@ body::-webkit-scrollbar {
   justify-content: center;
   min-height: 3600px;
   width: 100vw;
-  border: 2px solid red;
 }
 
 .body {
@@ -441,7 +441,7 @@ li:hover {
   .box::after {
     content: "";
     border-top: 300px solid var(--secondary-color);
-    border-right: 600px solid transparent;
+    border-right: 580px solid transparent;
     width: 0;
     position: absolute;
   }
@@ -486,19 +486,12 @@ li:hover {
 section {
   max-width: 100vw;
   height: min-content;
-}
-
-.articles .about {
-  /* border: 2px solid red; */
+  max-height: 1000px;
+  font-family: "Playfair Display", serif;
 }
 
 article {
   height: 1000px;
-  font-family: "Playfair Display", serif;
-}
-
-section {
-  max-height: 1000px;
   font-family: "Playfair Display", serif;
 }
 
@@ -507,8 +500,8 @@ section {
   justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-  max-height: max-content;
-  min-height: 960px;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .articles .about-title {
@@ -523,7 +516,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
 }
 
 .profile-img {
@@ -588,7 +581,6 @@ section {
   .profile-img {
     padding: 0;
     height: auto;
-    width: 150px;
   }
 
   .resume-btn {
@@ -614,7 +606,6 @@ section {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 2px solid green;
   height: 100vh;
   width: 100%;
 }
@@ -671,10 +662,6 @@ section {
   max-height: 150px;
 }
 
-.project * {
-  /* border: 2px solid red; */
-}
-
 @media (min-width: 900px) {
   .container p {
     font-size: 17px;
@@ -707,7 +694,7 @@ section {
   flex-wrap: wrap;
   gap: 40px;
   height: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .skills-title {
